[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/hiscore/hiscore.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/ui_resources/logo/spaceinvaders.png" type="Texture" id=3]
[ext_resource path="res://prefabs/ui_resources/fonts/main_font.tres" type="DynamicFont" id=4]

[node name="main" type="Node2D"]
position = Vector2( 2, 0 )
script = ExtResource( 1 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 94, 46 )
texture = ExtResource( 3 )

[node name="game_node" type="Node2D" parent="."]

[node name="btn_new_game" type="Button" parent="."]
margin_left = 56.0
margin_top = 283.0
margin_right = 124.0
margin_bottom = 304.0
custom_fonts/font = ExtResource( 4 )
text = "Play"
flat = true

[node name="hiscore" parent="." instance=ExtResource( 2 )]
margin_top = 94.0
margin_bottom = 243.0

[connection signal="pressed" from="btn_new_game" to="." method="_on_play_button_pressed"]
